user-apps/tools/pairdrop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pairdrop
spec:
  selector:
    app: pairdrop
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
